# AI-entity-renamer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt  setup.py  version.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  dependency-review.yml  hacs.yml  hassfest.yml  python-tests.yml  release.yml
custom_components/entity_renamer/: README.md  __init__.py  config_flow.py  const.py  hacs.json  manifest.json  services.yaml
custom_components/entity_renamer/frontend/: entity-renamer-panel.js  index.html
custom_components/entity_renamer/translations/: en.json
custom_components/entity_renamer/userfiles/: README.md
docs/: screenshot.png.txt
tests/: conftest.py  test_config_flow.py  test_init.py
